--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./mobile.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <title>Tailwind CSS Tempelate</title>
 </head>
@@ -56,7 +57,7 @@
         <div class="style-section-container">
            <div class="style-section-content">
               <div class="style-content-1" >
-                  <img src="./hero-01.png" >
+                  <img src="./hero-01.png"  width="700px" height="400px">
                </div>
            </div>
             <div class="empty-space-1"></div>
@@ -300,7 +301,7 @@
         <div class="subscribe-section-container">
             <div class="subscribe-contents subscribe-content-1">
                 <h1>Subscribe to Newsletter</h1>
-                <p>Provide your email to get email notification when we launch new products or <br>publish new articles.</p>
+                <p>Provide your email to get email notification when we launch new products or publish new articles.</p>
             </div>
             <div class="subscribe-contents subscribe-content-2">
                 <input type="email" name="email" placeholder="Enter your Email">
